[gd_scene load_steps=8 format=3 uid="uid://b3nxbvshgoqly"]

[ext_resource type="TileSet" uid="uid://c6tm8m5u0dxl" path="res://map/layers/terrain/32x32_terrrain_tiles.tres" id="1_tileset"]
[ext_resource type="Script" uid="uid://cuitpf8r6bmcw" path="res://map/game_map.gd" id="2_game_map_script"]
[ext_resource type="Script" uid="uid://quji4q6ycyh7" path="res://map/layers/terrain/terrain_layer.gd" id="3_0dvof"]
[ext_resource type="TileSet" uid="uid://dcblb7oc8nm7d" path="res://map/layers/unit/32x32_unit_tiles.tres" id="4_6rqhj"]
[ext_resource type="Script" uid="uid://dg0ne43vvru3b" path="res://map/layers/highlight/highlight_layer.gd" id="4_eg7ip"]
[ext_resource type="Script" uid="uid://dd74rnjnooqey" path="res://map/layers/unit/unit_layer.gd" id="4_idgu5"]
[ext_resource type="TileSet" uid="uid://sadruipgsrya" path="res://map/layers/highlight/32.x32_highlight_tiles.tres" id="4_s8ynm"]

[node name="GameMap" type="Node2D"]
script = ExtResource("2_game_map_script")

[node name="TerrainLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_tileset")
script = ExtResource("3_0dvof")

[node name="UnitLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_6rqhj")
script = ExtResource("4_idgu5")

[node name="HighlightLayer" type="TileMapLayer" parent="."]
visibility_layer = 32
tile_set = ExtResource("4_s8ynm")
script = ExtResource("4_eg7ip")
